--- a/src/main/resources/data/imm_ptl_surv_adapt/recipes/portal_wrapping_zone_inward.json
+++ b/src/main/resources/data/imm_ptl_surv_adapt/recipes/portal_wrapping_zone_inward.json
@@ -21,9 +21,9 @@
     "data": {
       "isValidEnd": false,
       "isValidStart": false,
-      "warpingType": "$ (0)#i",
-      "startPos": ["$ (0)#i", "$ (0)#i", "$ (0)#i"],
-      "endPos": ["$ (0)#i", "$ (0)#i", "$ (0)#i"]
+      "warpingType": 0,
+      "startPos": [0, 0, 0],
+      "endPos": [0, 0, 0]
     }
   }
 }
