--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 	modImplementation ('com.github.qouteall.ImmersivePortalsMod:build:v0.90-1.16'){
 		exclude(group: "net.fabricmc.fabric-api")
 	}
-	modApi("me.shedaniel.cloth:cloth-config-fabric:4.11.19") {
+	modApi ("me.shedaniel.cloth:cloth-config-fabric:4.11.19") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 
@@ -57,6 +57,8 @@ dependencies {
 	modImplementation ("de.siphalor:nbtcrafting-1.16:2+")
 	include 'de.siphalor:nbtcrafting-1.16:2+'
 	modImplementation include("io.github.cottonmc:LibGui:3.4.0+1.16.5")
+
+	modCompileOnly "com.github.TerraformersMC:ModMenu:${modmenu_version}"
 }
 
 processResources {
