--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,8 @@ dependencies {
     include "me.shedaniel.cloth:cloth-config-fabric:5.0.34"
 //	include 'com.github.qouteall.ImmersivePortalsMod:build:v0.88-1.16'
 
-    modImplementation ("de.siphalor:nbtcrafting-1.17:2+")
-    include 'de.siphalor:nbtcrafting-1.17:2+'
+    modImplementation ("de.siphalor:nbtcrafting-1.17:2.0.19+mc1.17")
+    include 'de.siphalor:nbtcrafting-1.17:2.0.19'
 
     modImplementation include("io.github.cottonmc:LibGui:4.1.5+1.17.1")
 
